school_work/cs321/hw3-parsing/FunAST/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import ast.*;
public class Parser implements ParserConstants {
  public static void main(String[] args) {
     new Parser(System.in);
     try {
       Defn[] program = Top();
       new IndentOutput(System.out).indent(program);
     } catch (ParseException e) {
       System.out.println("Invalid syntax at ("
                          + token.beginColumn + ","
                          + token.beginLine + "), "
                          + token.image);
     } catch (TokenMgrError e) {
       System.out.println(e.getMessage());
     }
  }

//- Parser Functions --------------------------------------------------

//creates the program array and reads to end of file
//symbol
  static final public Defn[] Top() throws ParseException {
                Defn[] program;
    program = Program(0);
    jj_consume_token(0);
      {if (true) return program;}
    throw new Error("Missing return statement in function");
  }

//function for creating an array of defns to make up
//the program 
  static final public Defn[] Program(int soFar) throws ParseException {
                             Defn d; Defn[] program;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 4:
    case 14:
    case 15:
      d = Defn();
      program = Program(soFar+1);
      program[soFar] = d; {if (true) return program;}
      break;
    default:
      jj_la1[0] = jj_gen;
      {if (true) return new Defn[soFar];}
    }
    throw new Error("Missing return statement in function");
  }

//call function that changes a call1 function to 
//an ExprStmt from a StmtExpr
  static final public ExprStmt Call() throws ParseException {
                   StmtExpr p;
    p = Call1();
      {if (true) return new ExprStmt(p);}
    throw new Error("Missing return statement in function");
  }

//function for creating function calls
  static final public StmtExpr Call1() throws ParseException {
                    Token t; Expr[] s;
    t = jj_consume_token(IDENT);
    jj_consume_token(1);
    s = Exprs(0);
    jj_consume_token(2);
      {if (true) return new Call(t.image, s);}
    throw new Error("Missing return statement in function");
  }

//creates an array of exprs for the args for a 
//function call
  static final public Expr[] Exprs(int soFar) throws ParseException {
                           Expr p; Expr[] s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 1:
    case INTLIT:
    case IDENT:
      p = Expr();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 3:
        jj_consume_token(3);
        s = Exprs(soFar + 1);
      s[soFar] = p; {if (true) return s;}
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      s = new Expr[soFar+1]; s[soFar] = p; {if (true) return s;}
      break;
    default:
      jj_la1[2] = jj_gen;
        {if (true) return new Expr[soFar];}
    }
    throw new Error("Missing return statement in function");
  }

//function definition function that has a return type,
//identifier an array of formals and a block
  static final public Defn Func() throws ParseException {
               Type r; Token n; Stmt b; Formal[] f;
    r = RetType();
    n = jj_consume_token(IDENT);
    f = Formal();
    b = Block();
      {if (true) return new Function(r, n.image, f, b);}
    throw new Error("Missing return statement in function");
  }

//return type function for the function def function 
  static final public Type RetType() throws ParseException {
                  Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 4:
      jj_consume_token(4);
       {if (true) return null;}
      break;
    case 14:
    case 15:
      t = Type();
       {if (true) return t;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//the formal function holds parenthesis with
//an array of formals inside that is returned 
//from the Formals function that calls itself 
//recursivly creating a comma seperated array
  static final public Formal[] Formal() throws ParseException {
                     Formal[] f;
    jj_consume_token(1);
    f = Formals(0);
    jj_consume_token(2);
      {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal[] Formals(int soFar) throws ParseException {
                               Formal p; Formal[] f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
      p = Param();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 3:
        jj_consume_token(3);
        f = Formals(soFar + 1);
      f[soFar] = p; {if (true) return f;}
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      f = new Formal[soFar+1]; f[soFar] = p; {if (true) return f;}
      break;
    default:
      jj_la1[5] = jj_gen;
      {if (true) return new Formal[soFar];}
    }
    throw new Error("Missing return statement in function");
  }

//parameter function for the function definition
//gets a type and an identifier
  static final public Formal Param() throws ParseException {
                  Type t; Token p;
    t = Type();
    p = jj_consume_token(IDENT);
      {if (true) return new Formal(t, p.image);}
    throw new Error("Missing return statement in function");
  }

//definition function that calls either the 
//globals function or the function
//function
  static final public Defn Defn() throws ParseException {
               Defn e, b;
    if (jj_2_1(3)) {
      e = Glbl();
      {if (true) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 4:
      case 14:
      case 15:
        b = Func();
      {if (true) return b;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

//global variable definition function, calls type
//and defs and gets an array of varIntros
  static final public Defn Glbl() throws ParseException {
               Type s; VarIntro[] v;
    s = Type();
    v = Defs(1);
    jj_consume_token(5);
      {if (true) return new Globals(s, v);}
    throw new Error("Missing return statement in function");
  }

//statement function that calls print, block
//if, while, return, empty, definition, empty
//function call, or an assignment statement
  static final public Stmt Stmt() throws ParseException {
               Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 6:
      s = Prnt();
      break;
    case 7:
      s = Block();
      break;
    case 9:
      s = If();
      break;
    case 11:
      s = Whl();
      break;
    case 12:
      s = Rtrn();
      break;
    case 14:
    case 15:
      s = Def();
      break;
    case 5:
      s = Empt();
      break;
    case IDENT:
      if (jj_2_2(2)) {
        s = Call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          s = AssignStmt();
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

//empty stmt with just a semicolon
  static final public Stmt Empt() throws ParseException {
    jj_consume_token(5);
      {if (true) return new Empty() ;}
    throw new Error("Missing return statement in function");
  }

//print statement function accepts print followed
//by one an expression followed by a semicolon
  static final public Stmt Prnt() throws ParseException {
               Expr s;
    jj_consume_token(6);
    s = Expr();
    jj_consume_token(5);
      {if (true) return new Print(s);}
    throw new Error("Missing return statement in function");
  }

//curly brackets with one or more stmts inside
//from the stmts function  
  static final public Stmt Block() throws ParseException {
                Stmt[] s;
    jj_consume_token(7);
    s = Stmts(0);
    jj_consume_token(8);
      {if (true) return new Block(s);}
    throw new Error("Missing return statement in function");
  }

//if statement function accepts an if, followed
//by parens with a comperison in the middle,
//followed by a stmt and an else with a stmt
//that is optional
  static final public Stmt If() throws ParseException {
             Stmt s, p; Expr t;
    jj_consume_token(9);
    jj_consume_token(1);
    t = Expr();
    jj_consume_token(2);
    s = Stmt();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
      jj_consume_token(10);
      p = Stmt();
      {if (true) return new If(t, s, p);}
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
      {if (true) return new If(t, s);}
    throw new Error("Missing return statement in function");
  }

//while statement function accepts while followed
//by parens with a comparison in the middle
//followed by a stmt
  static final public Stmt Whl() throws ParseException {
              Stmt s; Expr t;
    jj_consume_token(11);
    jj_consume_token(1);
    t = Expr();
    jj_consume_token(2);
    s = Stmt();
      {if (true) return new While(t, s);}
    throw new Error("Missing return statement in function");
  }

//return statement function accepts return followed
//by one an optional expression followed by a semicolon
  static final public Stmt Rtrn() throws ParseException {
               Expr s = null;
    jj_consume_token(12);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 1:
    case INTLIT:
    case IDENT:
      s = Expr();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(5);
      {if (true) return new Return(s);}
    throw new Error("Missing return statement in function");
  }

//function for the Defs function that is called for each
//variable introduction
  static final public VarIntro Var() throws ParseException {
                  Token t; Expr m;
    t = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      m = Expr();
      {if (true) return new InitVarIntro(t.image, m);}
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
      {if (true) return new VarIntro(t.image);}
    throw new Error("Missing return statement in function");
  }

//variable definition function to be called
//in the stmt function
  static final public Stmt Def() throws ParseException {
              Type s; VarIntro[] v;
    s = Type();
    v = Defs(1);
    jj_consume_token(5);
      {if (true) return new Locals(s, v);}
    throw new Error("Missing return statement in function");
  }

//function for creating array of VarIntro objects
//separated by commas and calls itself
  static final public VarIntro[] Defs(int soFar) throws ParseException {
                              VarIntro s; VarIntro[] v;
    s = Var();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 3:
      jj_consume_token(3);
      v = Defs(soFar + 1);
      v[soFar - 1] = s; {if (true) return v;}
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
      v = new VarIntro[soFar]; v[soFar - 1] = s; {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

//function for creatin an array of stmt objects
  static final public Stmt[] Stmts(int soFar) throws ParseException {
                           Stmt s; Stmt[] stmts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 5:
    case 6:
    case 7:
    case 9:
    case 11:
    case 12:
    case 14:
    case 15:
    case IDENT:
      s = Stmt();
      stmts = Stmts(soFar + 1);
      stmts[soFar] = s; {if (true) return stmts;}
      break;
    default:
      jj_la1[13] = jj_gen;
        {if (true) return new Stmt[soFar];}
    }
    throw new Error("Missing return statement in function");
  }

//chooses between int and boolean types
  static final public Type Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      jj_consume_token(14);
                  {if (true) return Type.INT;}
      break;
    case 15:
      jj_consume_token(15);
                  {if (true) return Type.BOOLEAN;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//changes the assign function call from a 
//StmtExpr to an ExprStmt and adds the semicolon
  static final public ExprStmt AssignStmt() throws ParseException {
                         StmtExpr e;
    e = Assign();
    jj_consume_token(5);
      {if (true) return new ExprStmt(e);}
    throw new Error("Missing return statement in function");
  }

//assign statement function that puts an identifier
//followed by an equals sign and an epression
  static final public Assign Assign() throws ParseException {
                   Expr d; Token t;
    t = jj_consume_token(IDENT);
    jj_consume_token(13);
    d = Expr();
      {if (true) return new Assign((t.image), d);}
    throw new Error("Missing return statement in function");
  }

//expression function that calls the assign
//function or the boolean or
  static final public Expr Expr() throws ParseException {
               Expr e;
    if (jj_2_3(2)) {
      e = Assign();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
      case INTLIT:
      case IDENT:
        e = Or();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//boolean or operation for expressions
  static final public Expr Or() throws ParseException {
             Expr e, d;
    e = And();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      d = Or();
      e = new LOr(e, d);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//boolean and operation for expressions
  static final public Expr And() throws ParseException {
              Expr e, d;
    e = Com();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
      jj_consume_token(17);
      d = And();
      e = new LAnd(e, d);
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//comparison operator functions for expressions including
//less than, less than or equal to, greater than, greater
//than or equal to, equal to, and not equal to.
  static final public Expr Com() throws ParseException {
              Expr e, d;
    e = SubAdd();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 18:
    case 19:
    case 20:
    case 21:
    case 22:
    case 23:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        jj_consume_token(18);
        d = SubAdd();
                                         e = new Lt(e, d);
        break;
      case 19:
        jj_consume_token(19);
        d = SubAdd();
                            e = new Lte(e, d);
        break;
      case 20:
        jj_consume_token(20);
        d = SubAdd();
                            e = new Gt(e, d);
        break;
      case 21:
        jj_consume_token(21);
        d = SubAdd();
                            e = new Gte(e, d);
        break;
      case 22:
        jj_consume_token(22);
        d = SubAdd();
                            e = new Eql(e, d);
        break;
      case 23:
        jj_consume_token(23);
        d = SubAdd();
                            e = new Neq(e, d);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//function for adding and subtracting of expressions
  static final public Expr SubAdd() throws ParseException {
                 Expr e, d;
    e = MulDiv();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
      case 25:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        d = MulDiv();
                                        e = new Add(e, d);
        break;
      case 25:
        jj_consume_token(25);
        d = MulDiv();
                          e = new Sub(e, d);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//function for multiplying or dividing of atoms or other expressions. 
  static final public Expr MulDiv() throws ParseException {
                 Expr e, d;
    e = Atom();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
      case 27:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        jj_consume_token(26);
        d = Atom();
                                    e = new Mul(e, d);
        break;
      case 27:
        jj_consume_token(27);
        d = Atom();
                        e = new Div(e, d);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//bottom of the grammar which includes an expr in paretheses
//and a function call, also the intlit and ident calls for
//expressions
  static final public Expr Atom() throws ParseException {
               Expr e; Token t;
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 1:
        jj_consume_token(1);
        e = Expr();
        jj_consume_token(2);
        break;
      case IDENT:
        e = Call1();
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                   {if (true) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTLIT:
        t = jj_consume_token(INTLIT);
                   {if (true) return new IntLit(Integer.parseInt(t.image));}
        break;
      case IDENT:
        t = jj_consume_token(IDENT);
                   {if (true) return new Id(t.image);}
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(13)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(15)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(14)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) return true;
    }
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(3)) return true;
    return false;
  }

  static private boolean jj_3R_3() {
    if (jj_3R_8()) return true;
    if (jj_3R_9()) return true;
    if (jj_scan_token(5)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_14()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(13)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_scan_token(INTLIT)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(1)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_6()) {
    jj_scanpos = xsp;
    if (jj_3R_7()) return true;
    }
    return false;
  }

  static private boolean jj_3R_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(IDENT)) return true;
    if (jj_scan_token(1)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) return true;
    }
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(IDENT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_3R_23()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[26];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xc010,0x8,0x2,0xc010,0x8,0xc000,0xc010,0x0,0xdae0,0x400,0x2,0x2000,0x8,0xdae0,0xc000,0x2,0x10000,0x20000,0xfc0000,0xfc0000,0x3000000,0x3000000,0xc000000,0xc000000,0x2,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0xc,0x0,0x0,0x0,0x0,0x8,0x8,0x0,0xc,0x0,0x0,0x8,0x0,0xc,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x8,0xc,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[4];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
